- add boostrap font-awesome - import bootstrap and font-awesome into style.css - update app.component.html

--- a/DatingApp-SPA/src/app/value/value.component.html
+++ b/DatingApp-SPA/src/app/value/value.component.html
@@ -1,3 +1,4 @@
-<p>
-    The values are going to be displayed here:
-</p>
+<div *ngFor="let value of values">
+    <p>Id: {{ value.id }}</p>
+    <p>Name: {{ value.name }}</p>
+</div>
