--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -11,18 +11,32 @@
             <a class="nav-link" href="#">Messages</a>
         </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <form
+        #loginForm="ngForm"
+        class="form-inline my-2 my-lg-0"
+        (ngSubmit)="login()"
+    >
         <input
             class="form-control mr-sm-2"
             placeholder="Username"
             type="text"
+            name="username"
+            required
+            [(ngModel)]="model.username"
         />
         <input
             class="form-control mr-sm-2"
             placeholder="Password"
             type="password"
+            name="password"
+            required
+            [(ngModel)]="model.password"
         />
-        <button class="btn btn-success my-2 my-sm-0" type="submit">
+        <button
+            [disabled]="!loginForm.valid"
+            class="btn btn-success my-2 my-sm-0"
+            type="submit"
+        >
             Login
         </button>
     </form>
