--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -10,8 +10,27 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Messages</a>
         </li>
+        <li *ngIf="isLoggedIn()" class="nav-item">
+            <a class="nav-link" href="#" (click)="logout()">Logout</a>
+        </li>
     </ul>
+    <div class="dropdown" *ngIf="isLoggedIn()">
+        <a class="dropdown-toggle text-light">
+            Dropdown link
+        </a>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#"
+                ><i class="fa fa-user"></i>Edit Profile</a
+            >
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#"
+                ><i class="fa fa-signout"></i>Logout</a
+            >
+        </div>
+    </div>
+
     <form
+        *ngIf="!isLoggedIn()"
         #loginForm="ngForm"
         class="form-inline my-2 my-lg-0"
         (ngSubmit)="login()"
