--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-nav></app-nav>
 <div class="container">
-    <h1>{{ title }} app is running!</h1>
-    <app-value></app-value>
+    <app-home></app-home>
 </div>
