jwtHelperService: - add JwtHelperService - refactor isLogged method to use new isLogged method of auth service

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
         </li>
     </ul>
     <div class="dropdown" *ngIf="isLoggedIn()">
-        <a class="dropdown-toggle text-light">
+        <a class="dropdown-toggle">
             Dropdown link
         </a>
         <div class="dropdown-menu">
