auth service: - add ngOnInit method to load token and decode token in case page is refreshed - add possibility to display user name on dropdown menu

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
     </ul>
     <div class="dropdown" *ngIf="isLoggedIn()">
         <a class="dropdown-toggle">
-            Dropdown link
+            Welcome {{ authService.decodedToken?.unique_name }}
         </a>
         <div class="dropdown-menu">
             <a class="dropdown-item" href="#"
