--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,62 +1,61 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-        </li>
-        <li *ngIf="isLoggedIn()" class="nav-item">
-            <a class="nav-link" href="#" (click)="logout()">Logout</a>
-        </li>
-    </ul>
-    <div class="dropdown" *ngIf="isLoggedIn()">
-        <a class="dropdown-toggle">
-            Welcome {{ authService.decodedToken?.unique_name }}
-        </a>
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#"
-                ><i class="fa fa-user"></i>Edit Profile</a
-            >
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"
-                ><i class="fa fa-signout"></i>Logout</a
-            >
+    <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Matches</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Lists</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Messages</a>
+            </li>
+        </ul>
+        <div dropdown class="dropdown" *ngIf="isLoggedIn()">
+            <a dropdownToggle class="dropdown-toggle">
+                Welcome {{ authService.decodedToken?.unique_name }}
+            </a>
+            <div *dropdownMenu class="dropdown-menu mt-3">
+                <a class="dropdown-item" href="#"
+                    ><i class="fa fa-user"></i>Edit Profile</a
+                >
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" (click)="logout()"
+                    ><i class="fa fa-signout"></i>Logout</a
+                >
+            </div>
         </div>
-    </div>
 
-    <form
-        *ngIf="!isLoggedIn()"
-        #loginForm="ngForm"
-        class="form-inline my-2 my-lg-0"
-        (ngSubmit)="login()"
-    >
-        <input
-            class="form-control mr-sm-2"
-            placeholder="Username"
-            type="text"
-            name="username"
-            required
-            [(ngModel)]="model.username"
-        />
-        <input
-            class="form-control mr-sm-2"
-            placeholder="Password"
-            type="password"
-            name="password"
-            required
-            [(ngModel)]="model.password"
-        />
-        <button
-            [disabled]="!loginForm.valid"
-            class="btn btn-success my-2 my-sm-0"
-            type="submit"
+        <form
+            *ngIf="!isLoggedIn()"
+            #loginForm="ngForm"
+            class="form-inline my-2 my-lg-0"
+            (ngSubmit)="login()"
         >
-            Login
-        </button>
-    </form>
+            <input
+                class="form-control mr-sm-2"
+                placeholder="Username"
+                type="text"
+                name="username"
+                required
+                [(ngModel)]="model.username"
+            />
+            <input
+                class="form-control mr-sm-2"
+                placeholder="Password"
+                type="password"
+                name="password"
+                required
+                [(ngModel)]="model.password"
+            />
+            <button
+                [disabled]="!loginForm.valid"
+                class="btn btn-success my-2 my-sm-0"
+                type="submit"
+            >
+                Login
+            </button>
+        </form>
+    </div>
 </nav>
