--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
     <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
         <ul *ngIf="isLoggedIn()" class="navbar-nav mr-auto">
@@ -13,7 +13,7 @@
             </li>
         </ul>
         <div dropdown class="dropdown" *ngIf="isLoggedIn()">
-            <a dropdownToggle class="dropdown-toggle">
+            <a dropdownToggle class="dropdown-toggle text-light">
                 Welcome {{ authService.decodedToken?.unique_name }}
             </a>
             <div *dropdownMenu class="dropdown-menu mt-3">
