--- a/DatingApp-SPA/src/app/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/member-list/member-list.component.html
@@ -1,1 +1,5 @@
-<p>member-list works!</p>
+<div class="container">
+    <div class="col-lg-2 col-md-3 col-sm-6">
+        <p *ngFor="let user of users">{{ user.knownAs }}</p>
+    </div>
+</div>
