--- a/DatingApp-SPA/src/app/members/member/member.component.html
+++ b/DatingApp-SPA/src/app/members/member/member.component.html
@@ -7,7 +7,10 @@
         />
         <ul class="list-inline text-center member-icons animate">
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button
+                    class="btn btn-primary"
+                    [routerLink]="['/members/', member.id]"
+                >
                     <i class="fa fa-user"></i>
                 </button>
             </li>
