--- a/DatingApp-SPA/src/app/members/member-details/member-details.component.html
+++ b/DatingApp-SPA/src/app/members/member-details/member-details.component.html
@@ -3,8 +3,8 @@
         <div class="col-sm-4">
             <div class="card">
                 <img
-                    src="{{ user?.photoUrl }}"
-                    alt="{{ user?.knownAs }}"
+                    src="{{ user.photoUrl }}"
+                    alt="{{ user.knownAs }}"
                     class="card-img-top img-thumbnail"
                 />
 
@@ -13,23 +13,23 @@
                         <strong>
                             Location:
                         </strong>
-                        <p>{{ user?.city }}</p>
+                        <p>{{ user.city }}</p>
                     </div>
                     <div>
                         <strong>
                             Age:
                         </strong>
-                        <p>{{ user?.age }}</p>
+                        <p>{{ user.age }}</p>
                     </div>
                     <div>
                         <strong>
                             Last active:
                         </strong>
-                        <p>{{ user?.lastActive }}</p>
+                        <p>{{ user.lastActive }}</p>
                     </div>
                     <div>
                         <strong>Member since:</strong>
-                        <p>{{ user?.created }}</p>
+                        <p>{{ user.created }}</p>
                     </div>
                 </div>
                 <div class="card-footer">
@@ -45,15 +45,15 @@
         <div class="col-sm-8">
             <div class="tab-panel">
                 <tabset>
-                    <tab heading="About {{ user?.knownAs }}">
+                    <tab heading="About {{ user.knownAs }}">
                         <h4>Description</h4>
-                        <p>{{ user?.introduction }}</p>
+                        <p>{{ user.introduction }}</p>
                         <h4>Looking For</h4>
-                        <p>{{ user?.lookingFor }}</p>
+                        <p>{{ user.lookingFor }}</p>
                     </tab>
                     <tab heading="Interests">
                         <h4>Interests</h4>
-                        <p>{{ user?.interests }}</p>
+                        <p>{{ user.interests }}</p>
                     </tab>
                     <tab heading="Photos"><p>Photos will go here!</p></tab>
                     <tab heading="Messages"><p>Messages will go here!</p></tab>
