--- a/DatingApp-SPA/src/app/members/member-details/member-details.component.html
+++ b/DatingApp-SPA/src/app/members/member-details/member-details.component.html
@@ -55,7 +55,12 @@
                         <h4>Interests</h4>
                         <p>{{ user.interests }}</p>
                     </tab>
-                    <tab heading="Photos"><p>Photos will go here!</p></tab>
+                    <tab heading="Photos">
+                        <ngx-gallery
+                            [options]="galleryOptions"
+                            [images]="galleryImages"
+                        ></ngx-gallery
+                    ></tab>
                     <tab heading="Messages"><p>Messages will go here!</p></tab>
                 </tabset>
             </div>
