--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,7 +17,10 @@
                 Welcome {{ authService.decodedToken?.unique_name }}
             </a>
             <div *dropdownMenu class="dropdown-menu mt-3">
-                <a class="dropdown-item" href="#"
+                <a
+                    class="dropdown-item"
+                    [routerLink]="['/member/edit']"
+                    routerLinkActive="router-link-active"
                     ><i class="fa fa-user"></i>Edit Profile</a
                 >
                 <div class="dropdown-divider"></div>
