--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -103,7 +103,7 @@
                         </form>
                     </tab>
                     <tab heading="Edit Photos">
-                        <p>Photo edits will go here</p>
+                        <app-photo-edit [photos]="user.photos"></app-photo-edit>
                     </tab>
                 </tabset>
             </div>
