--- a/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.css
+++ b/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.css
@@ -3,3 +3,11 @@ img.img-thumbnail {
     min-width: 100px;
     margin-bottom: 2px;
 }
+
+.nv-file-over {
+    border: dotted 3px;
+}
+
+input[type='file'] {
+    color: transparent;
+}
