--- a/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.html
+++ b/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.html
@@ -19,9 +19,10 @@
             [ngClass]="{ 'nv-file-over': hasBaseDropZoneOver }"
             (fileOver)="fileOverBase($event)"
             [uploader]="uploader"
-            class="well my-drop-zone"
+            class="card bg-faded text-center p-3 mb-3 my-drop-zone"
         >
-            Base drop zone
+            <i class="fa fa-upload fa-3x"></i>
+            Drop photos here
         </div>
 
         Multiple
@@ -31,7 +32,11 @@
         <input type="file" ng2FileSelect [uploader]="uploader" />
     </div>
 
-    <div class="col-md-9" style="margin-bottom: 40px;">
+    <div
+        class="col-md-9"
+        style="margin-bottom: 40px;"
+        *ngIf="uploader.queue.length > 0"
+    >
         <h3>Upload queue</h3>
         <p>Queue length: {{ uploader?.queue?.length }}</p>
 
@@ -40,9 +45,6 @@
                 <tr>
                     <th width="50%">Name</th>
                     <th>Size</th>
-                    <th>Progress</th>
-                    <th>Status</th>
-                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -52,58 +54,6 @@
                     </td>
                     <td *ngIf="uploader.options.isHTML5" nowrap>
                         {{ item?.file?.size / 1024 / 1024 | number: '.2' }} MB
-                    </td>
-                    <td *ngIf="uploader.options.isHTML5">
-                        <div class="progress" style="margin-bottom: 0;">
-                            <div
-                                class="progress-bar"
-                                role="progressbar"
-                                [ngStyle]="{ width: item.progress + '%' }"
-                            ></div>
-                        </div>
-                    </td>
-                    <td class="text-center">
-                        <span *ngIf="item.isSuccess"
-                            ><i class="glyphicon glyphicon-ok"></i
-                        ></span>
-                        <span *ngIf="item.isCancel"
-                            ><i class="glyphicon glyphicon-ban-circle"></i
-                        ></span>
-                        <span *ngIf="item.isError"
-                            ><i class="glyphicon glyphicon-remove"></i
-                        ></span>
-                    </td>
-                    <td nowrap>
-                        <button
-                            type="button"
-                            class="btn btn-success btn-xs"
-                            (click)="item.upload()"
-                            [disabled]="
-                                item.isReady ||
-                                item.isUploading ||
-                                item.isSuccess
-                            "
-                        >
-                            <span class="glyphicon glyphicon-upload"></span>
-                            Upload
-                        </button>
-                        <button
-                            type="button"
-                            class="btn btn-warning btn-xs"
-                            (click)="item.cancel()"
-                            [disabled]="!item.isUploading"
-                        >
-                            <span class="glyphicon glyphicon-ban-circle"></span>
-                            Cancel
-                        </button>
-                        <button
-                            type="button"
-                            class="btn btn-danger btn-xs"
-                            (click)="item.remove()"
-                        >
-                            <span class="glyphicon glyphicon-trash"></span>
-                            Remove
-                        </button>
                     </td>
                 </tr>
             </tbody>
