photo-edit.component: - add possibility to update the larger in member-edit.component when user select new main photo in photos

--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -103,7 +103,10 @@
                         </form>
                     </tab>
                     <tab heading="Edit Photos">
-                        <app-photo-edit [photos]="user.photos"></app-photo-edit>
+                        <app-photo-edit
+                            [photos]="user.photos"
+                            (setPhotoUrl)="setPhotoUrlForUser($event)"
+                        ></app-photo-edit>
                     </tab>
                 </tabset>
             </div>
