photo navbar: - add possibility to return user from Login in AuthController - add markup for photo in nav.component - add possibility to set and retrieve user from localStorage

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -13,6 +13,12 @@
             </li>
         </ul>
         <div dropdown class="dropdown" *ngIf="isLoggedIn()">
+            <span class="mr-1">
+                <img
+                    src="{{ authService.currentUser.photoUrl }}"
+                    alt="{{ authService.currentUser.knownAs }}"
+                />
+            </span>
             <a dropdownToggle class="dropdown-toggle text-light">
                 Welcome {{ authService.decodedToken?.unique_name }}
             </a>
