photo-edit.component: - add possibility to delete a photo when clicking on it

--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -106,6 +106,7 @@
                         <app-photo-edit
                             [photos]="user.photos"
                             (setPhotoUrl)="setPhotoUrlForUser($event)"
+                            (setPhotos)="setPhotos($event)"
                         ></app-photo-edit>
                     </tab>
                 </tabset>
