--- a/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.html
+++ b/DatingApp-SPA/src/app/members/photo-edit/photo-edit.component.html
@@ -13,7 +13,11 @@
             >
                 Main
             </button>
-            <button type="button" class="btn btn-sm btn-danger">
+            <button
+                type="button"
+                class="btn btn-sm btn-danger"
+                (click)="deletePhoto(photo)"
+            >
                 <i class="fa fa-trash-o"></i>
             </button>
         </div>
