--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group">
         <input
-            type="confirmPassword"
+            type="password"
             class="form-control"
             formControlName="confirmPassword"
             placeholder="Confirm Password"
