--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -70,7 +70,9 @@
             class="form-control"
             placeholder="Date of Birth"
             formControlName="dateOfBirth"
-            type="date"
+            type="text"
+            bsDatepicker
+            [bsConfig]="bsDatePickerConfig"
         />
         <div
             class="invalid-feedback"
