--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
         <div dropdown class="dropdown" *ngIf="isLoggedIn()">
             <span class="mr-1">
                 <img
-                    src="{{ photoUrl }}"
+                    src="{{ photoUrl || '../../assets/user.png' }}"
                     alt="{{ authService.currentUser.knownAs }}"
                 />
             </span>
