--- a/DatingApp-SPA/src/app/members/member-details/member-details.component.html
+++ b/DatingApp-SPA/src/app/members/member-details/member-details.component.html
@@ -30,11 +30,11 @@
                         <strong>
                             Last active:
                         </strong>
-                        <p>{{ user.lastActive }}</p>
+                        <p>{{ user.lastActive | timeAgo }}</p>
                     </div>
                     <div>
                         <strong>Member since:</strong>
-                        <p>{{ user.created }}</p>
+                        <p>{{ user.createdAt | date }}</p>
                     </div>
                 </div>
                 <div class="card-footer">
