--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -4,4 +4,18 @@
             <app-member [member]="user"> </app-member>
         </div>
     </div>
+    <div class="row justify-content-center">
+        <pagination
+            [boundaryLinks]="true"
+            [totalItems]="pagination.totalItems"
+            [itemsPerPage]="pagination.itemsPerPage"
+            [(ngModel)]="pagination.currentPage"
+            (pageChanged)="pageChanged($event)"
+            previousText="&lsaquo;"
+            nextText="&rsaquo;"
+            firstText="&laquo;"
+            lastText="&raquo;"
+        >
+        </pagination>
+    </div>
 </div>
