pagination: - add possibility to order by lastActive or newest members on frontend

--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -57,6 +57,30 @@
     >
         Reset Filter
     </button>
+    <div class="col">
+        <div class="btn-group float-right">
+            <button
+                type="button"
+                name="orderBy"
+                [(ngModel)]="userParams.orderBy"
+                class="btn btn-primary"
+                btnRadio="lastActive"
+                (click)="loadUsers()"
+            >
+                Last Active
+            </button>
+            <button
+                type="button"
+                name="orderBy"
+                [(ngModel)]="userParams.orderBy"
+                class="btn btn-primary"
+                btnRadio="created"
+                (click)="loadUsers()"
+            >
+                Newest Members
+            </button>
+        </div>
+    </div>
 </form>
 <br />
 
