--- a/DatingApp-SPA/src/app/members/member/member.component.html
+++ b/DatingApp-SPA/src/app/members/member/member.component.html
@@ -15,7 +15,7 @@
                 </button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click)="sendLike(member.id)">
                     <i class="fa fa-heart"></i>
                 </button>
             </li>
